src/examples/errors/call_unknown_id.del


def f(int a, int b) -> nil {

    return;
}

def main() -> nil {

    f(a, 3);
    return;
}